# NeuroTest

./: .env.example  README.md  docker-compose.yaml  docker-compose.yml  main.py  mvp1_text2json.py  mvp2_json2answer.py  pyproject.toml  test_ci.txt
.github/workflows/: release.yml
backend/: CHANGELOG.md  main.py  mvp1_text2json.py  mvp2_json2answer.py  pyproject.toml  test_feat.py
backend/api/v1/routers/: __init__.py  neurotest.py
backend/core/: settings.py
backend/files/: 3Q_TestITOP03.docx  3Q_TestITOP03_answers.json  3Q_TestITOP03_text.json  index.json  text_01_03_20.docx  text_01_03_20.json  БД12.docx  БД12_text.json  Итоговый0301_Ср17.json  Итоговый0302_Комов_Чт18.json  Итоговый0501_Вт16.json  ИтоговыйИТ_Пт19.json  Экз_ИТ_ОП03.json  Экз_ОснАлгИПрог_Пятовская.json  Экзамен03_01.json  Экзамен03_02.json  Экзамен_Управление_ИТ_Проектами.json
backend/services/: file.py  json2answer.py  text2json.py
frontend/: index.html
